--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -193,6 +193,7 @@
 		                                                        actions         => [
 		                                                                            {title => "Modificar", action=>'modificarNivel2("[% id2 %]")',icon=>"icon-edit"},
 		                                                                            {title => "Eliminar", action=>"borrarN2([% id2 %])", icon=>"icon-trash"},   
+                                                                                    {title => "Agregar ejemplares", action=>'agregarN3("[% id2 %]","[% nivel2_template %]")', icon=>"icon-plus-sign"},
                                                                                     {title => "Editar &iacute;ndice", action=>'agregarIndice([% id2 %])', icon=>"icon-list"},
                                                                                 [% IF show_action == 1 %]
                                                                                     {title => "Agregar analítica", action=>"agregarAnalitica([% id2 %])", icon=>"icon-edit"},
