--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
@@ -3,7 +3,6 @@
 
 [% USE HTML %]
 
-<!-- TEMPLATE DE CAMPOS TEMPORALES -->
 <!-- FIXME no se si se usa el hidden -->
 <input id="obligatorio" type="hidden" value="">
 
@@ -14,7 +13,7 @@
 		   <a href="#" class="close" data-dismiss="modal">×</a>
 	   </div>
        <div class="modal-body">
-	      <form class="form-horizontal" onsubmit="return false">
+	      <form class="form-horizontal" onsubmit="return false;">
 			    <div class="control-group">
 			        <label class="control-label" for="tipo_nivel3_id"> [% "Esquema" | i18n %]: </label>
 			        <div class="controls">
