--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -47,6 +47,7 @@
                     [% FOREACH mensaje IN mensajes_contacto %]
                         <tr>
                             <td>
+                                    <i class="icon-cog"></i>
                                   [% mensaje.getFecha %] 
                             </td>
                             <td>
