--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplar.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplar.tmpl
@@ -1,6 +1,9 @@
 [% INCLUDE "intranet-top.inc" %]
 [% INCLUDE 'datePicker.inc' %]
 
+    <script src="/intranet-tmpl/includes/circulacion-min.js"></script>
+    <script src="/intranet-tmpl/includes/detalleEjemplar.js"></script>
+
 <script>
 var AUTO_GENERAR_COMPROBANTE = '[% auto_generar_comprobante_prestamo %]';
     //2 objetos AJAX para que funcionen los paginadores a la vez en el mismo tmpl
@@ -95,6 +98,8 @@ var AUTO_GENERAR_COMPROBANTE = '[% auto_generar_comprobante_prestamo %]';
                 <dt class="inline left rightMargin">[% "Ultima actualizaci&oacute;n"|i18n %]:</dt> <dd>[% nivel3.getUpdatedAt_format  %]</dd>
             [% END %]
 
+
+            <br />
 		   [% IF socio_reserva %]
 		       <dt class="inline left rightMargin">[% 'Reservado a:' | i18n  %]</dt> 
 		       <dd>
@@ -107,7 +112,36 @@ var AUTO_GENERAR_COMPROBANTE = '[% auto_generar_comprobante_prestamo %]';
 		                                        );
 		        [% END %]
 		       </dd>
-		   [% END %]
+		   [% ELSE %]
+                [% IF nivel3.estaPrestado %]
+                       [% PERL %]
+                           print C4::AR::Filtros::action_set_button(    
+                                   title           => '[% "Devolver" | i18n %]',
+                                   action          =>'devolverPrestamo("[% socio_prestamo.getNro_socio %]","[% socio_prestamo.persona.getApeYNom %]","[% id2 %]","[% prestamo.getId_prestamo %]")',
+                                   button          => 'btn btn-danger',
+                                   icon=>"icon-share-alt icon-white",
+                                   actions         => [
+                                                       [% IF prestamo.sePuedeRenovar %]
+                                                           {title => "Renovar", 
+                                                            action=>'renovarPrestamo("[% socio_prestamo.getNro_socio %]","[% socio_prestamo.persona.getApeYNom %]","[% id2 %]","[% prestamo.getId_prestamo %]")', 
+                                                            icon=>"icon-retweet"
+                                                           },
+                                                       [% END %]
+                                                       ],
+                                   ) ;
+                       [% END %]
+	           [% ELSE %]
+	                [% PERL %]
+	                     print C4::AR::Filtros::action_set_button(    
+	                             title           => '[% " Prestar" | i18n %]',
+	                             button          => 'btn btn-success',
+	                             action          => 'buscarUsuario([% nivel3.id2 %],[% nivel3.id %])', 
+	                             icon            => "icon-repeat icon-white",
+	                         );
+	                 [% END %]
+	           
+			   [% END %]
+	     [% END %]
 	   </dl>
 	
 	<div id="historicoDisponibilidad"></div>
