--- a/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
@@ -99,7 +99,7 @@ function MultiSelector( list_target, max ){this.list_target = list_target;this.c
         
         [% END %]
         
-        var multi_selector = new MultiSelector( document.getElementById( 'imagesList' ), 5 ); 
+        var multi_selector = new MultiSelector( document.getElementById( 'imagesList' ), fileMax ); 
         multi_selector.addElement( document.getElementById( 'imagesInput' ) );
         
     });
@@ -110,15 +110,18 @@ function MultiSelector( list_target, max ){this.list_target = list_target;this.c
 
 [% IF editing %]
     <form id="form_novedad" action="[% url_prefix %]/admin/editar_novedad.pl" method="POST" class="form-horizontal" enctype="multipart/form-data">
+<fieldset>
+    <legend>[% "Editar novedad de OPAC" | i18n %]:</legend>
         <input type="hidden" id="action" name="action" value="editar">
         <input type="hidden" id="token" name="token" value="[% token %]">
         <input type="hidden" id="novedad_id" name="novedad_id" value="[% novedad.id %]">
 [% ELSE %]
     <form id="form_novedad" action="[% url_prefix %]/admin/agregar_novedad.pl" method="POST" class="form-horizontal" enctype="multipart/form-data">
-        <input type="hidden" id="action" name="action" value="agregar">
-[% END %]
 <fieldset>
     <legend>[% "Agregar novedad de OPAC" | i18n %]:</legend>
+        <input type="hidden" id="action" name="action" value="agregar">
+[% END %]
+
                 <div class="control-group">
                     <label class="control-label" for="titulo">[% "Titulo" | i18n %]</label>
                     <div class="controls">
@@ -151,6 +154,21 @@ function MultiSelector( list_target, max ){this.list_target = list_target;this.c
                 [% END %]
                 
                 [% IF editing %]
+                
+                    <div class="control-group">
+                        <label class="control-label" for="links">[% "Links" | i18n %]</label>
+                        <div class="controls">
+                            <input type="text" id="links" name="links" value="[% novedad.getLinks %]">
+                            [% PERL %]
+                            
+                                print C4::AR::Filtros::setHelpInput(
+                                                        text => "[% 'Ingrese los links separados por espacio.' | i18n %]",
+                                
+                                );
+                            
+                            [% END %]
+                        </div>
+                    </div>
                 
                     [% IF cant_novedades %]
                 
@@ -204,6 +222,21 @@ function MultiSelector( list_target, max ){this.list_target = list_target;this.c
                 
                 
                 [% ELSE %]
+                
+                    <div class="control-group">
+                        <label class="control-label" for="links">[% "Links" | i18n %]</label>
+                        <div class="controls">
+                            <input type="text" id="links" name="links" value="[% novedad.getCategoria %]">
+                            [% PERL %]
+                            
+                                print C4::AR::Filtros::setHelpInput(
+                                                        text => "[% 'Ingrese los links separados por espacio.' | i18n %]",
+                                
+                                );
+                            
+                            [% END %]
+                        </div>
+                    </div>
                 
                     <div class="control-group">
                         <label class="control-label" >[% "Imagen/es" | i18n %]</label>
