--- a/intranet/htdocs/intranet-tmpl/about/about.tmpl
+++ b/intranet/htdocs/intranet-tmpl/about/about.tmpl
@@ -40,7 +40,7 @@ function updateEdit(responseText){
 <div id="edicion_about"></div>
 
 <fieldset>
-    <legend class="titulo_legend">Equipo Central</legend>
+    <legend class="titulo_legend">[% 'Equipo de desarrollo' | i18n %]</legend>
     <div>
          <dt><a href="http://www.cespi.unlp.edu.ar" target="_blank">CESPI</a> - <a href="http://www.linti.unlp.edu.ar" target="_blank">LINTI</a> - <a href="http://www.info.unlp.edu.ar" target="_blank">Facultad de Informática</a></dt> 
          <dd>Javier D&iacute;az</dd>
