--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -81,8 +81,8 @@ var jobID = 0;
 	   <br />
     [% END %]
     <br />
-    <a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" > 
-      <img id="button_twitter" src="[% temas %]/[% tema %]/imagenes/botones/button_twitter_normal.png" alt="Twitter" />
+    <a class="fancy_link btn btn-inverse" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" > 
+        <i class="icon-white icon-retweet"></i> [% 'Twitter' | i18n %]
     </a>
     
 </div>
