--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -57,14 +57,16 @@ var loaderPath= "";
 	            action: '[% url_prefix %]/usuarios/reales/uploadPicture.pl',
 	            params: {
 	            	nro_socio: '[% nro_socio %]',
+	            	token:    '[% token %]',
 	            },
 	            allowedExtensions: ["bmp","jpg","gif","png","jpeg"],
-	            onComplete: function(id, fileName){detalleUsuario();},
+	            onComplete: function(id, fileName){detalleUsuario();clearMessages();},
 	            debug: true,
 	            multiple: false,
+	            showMessage: function(message){ jAlert(message); }
 	        });
         [% ELSE %]
-            $('#label-file-uploader').hide();
+            $('#label-file-uploader').html('');
         [% END %]
         
     });
